DEV-27097: Fix layout issues

--- a/user-browser/src/index.css
+++ b/user-browser/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: "Nunito Sans", sans-serif !important;
   font-size: 13px;
   background-color: #ecf0f9;;
+  padding-top:20vh;
 }
 
 .navbar {
